# Mariyka

./: .gitignore  CMakeLists.txt  MainWindow.cmb  MainWindow.py  README.md  main.cpp  main.py  main_window.ui  password.ui
include/: MainWindow.h
src/: MainWindow.cpp
